Force nsViewManager to respect DONT_BITBLT flags on descendant views when we scroll a parent view. Fix for bug 68499. r=kmcclusk,sr=attinasi